# slowpoke

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  run_example.sh  todo.txt
crates/slowpoke/: Cargo.toml
crates/slowpoke-egui/: Cargo.toml
crates/slowpoke-egui/examples/: circle.rs
crates/slowpoke-egui/src/: lib.rs
crates/slowpoke-iced/: Cargo.toml
crates/slowpoke-iced/examples/: playground.rs
crates/slowpoke-iced/src/: lib.rs
crates/slowpoke-ratatui/: Cargo.toml
examples/: 7star.rs  back-and-forth.rs  basic_circle.rs  bgpic.rs  circle.rs  circle90.rs  clear-test.rs  clearstamps.rs  complex1.rs  control.rs  deep-fractal.rs  degrad.rs  distance.rs  doraemon.rs  dual-turtle.rs  eyes.rs  fill-triangle.rs  flash.rs  flashy-turtle.rs  fractal.rs  get-turtles.rs  goto.rs  goto_vs_teleport.rs  heading.rs  idle.rs  jumper.rs  line.rs  mouse.rs  multi-thread-turtle.rs  multi-turtle.rs  nested-cubes.rs  notrace-circle.rs  numinput.rs  octagon.rs  parallelogram.rs  pencolor.rs  pentagram.rs  playground.rs  polyshape.rs  radius.rs  (+21 more)
python-examples/: doraemon.py  heading.py  just-the-scarf.py  setheading.py  square-fractal.py
src/: color_names.rs  command.rs  comms.rs  draw.rs  generate.rs  input.rs  lib.rs  main.rs  polygon.rs  speed.rs  turtle.rs
src/draw/: appearance.rs  circle.rs  dot.rs  drawing_state.rs  filling.rs  input_methods.rs  move_and_draw.rs  screen_commands.rs  settings_for_measurement.rs  special.rs  state.rs
src/gui/: events.rs  iced_gui.rs  mod.rs  popup.rs  ratatui_tui.rs
src/turtle/: handler.rs  popup.rs  task.rs  types.rs
(+43 files in other folders)
