[package]
name = "slowpoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.2"
either = "1.10.0"
iced = { version = "0.12.1", features = ["canvas", "smol", "multi-window"] }
lyon_tessellation = "1.0.13"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
debug = true
