[package]
name = "slowpoke"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
either = "1.10.0"
lyon_tessellation = "1.0.13"
iced = { version = "0.12.1", features = ["canvas", "smol", "multi-window"], optional = true }
ratatui = { version = "0.28.1", optional = true }
clamp_to = "0.2.2"
crossterm = "0.28.1"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
debug = true

[features]
default = ["iced"]
iced = ["dep:iced"]
ratatui = ["dep:ratatui"]

[lints.clippy]
all = "warn"
# pedantic = "warn"
# nursery = "warn"
